cmake_minimum_required(VERSION 3.10)
project(CLion_0911)

set(CMAKE_CXX_STANDARD 11)

add_executable(CLion_0911 main.cpp CppCh2/cpp24.cpp CppCh2/cpp25.cpp CppCh2/test.h CppCh2/cpp26.h CppCh2/cpp27.h CppCh2/cpp28.h CppCh2/cpp29.h CppCh2/MY_CONSTANTS.h CppCh3/cpp31.h CppCh3/cpp32.h CppCh3/cpp33.h CppCh3/cpp34.h CppCh3/cpp35.h CppCh3/cpp36.h CppCh3/cpp37.h CppCh3/cpp38.h CppCh3/cpp39.h CppCh4/cpp41.h CppCh2/test.cpp CppCh4/cpp42.h CppCh4/cpp42external.cpp CppCh4/cpp42external.h CppCh4/includeCppExpl.cpp CppCh4/MyConstants.cpp CppCh4/MyConstants.h CppCh4/cpp43.cpp CppCh4/cpp44.cpp CppCh4/cpp45.cpp CppCh4/cpp46.cpp CppCh4/cpp47.cpp)