cmake_minimum_required(VERSION 3.10)
project(CLion_0929)

set(CMAKE_CXX_STANDARD 17)

add_executable(CLion_0929 main.cpp CppCh6/cpp62.cpp CppCh6/cpp63.cpp CppCh6/cpp64.cpp CppCh6/cpp65.cpp CppCh6/cpp66.cpp CppCh6/cpp67.cpp CppCh6/cpp67a.cpp CppCh6/cpp68.cpp CppCh6/cpp69.cpp CppCh6/cpp610.cpp CppCh6/cpp611.cpp CppCh6/cpp612.cpp CppCh6/cpp613.cpp CppCh6/cpp614.cpp CppCh6/cpp615.cpp CppCh6/cpp616.cpp CppCh6/cpp617.cpp CppCh6/cpp618.cpp CppCh6/cpp619.cpp CppCh6/cpp620.cpp CppCh6/cpp621.cpp)